<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_name_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_app"
        android:layout_centerHorizontal="true"
        android:textSize="28dp"
        android:textStyle="bold"
        android:layout_marginTop="49sp"
        android:textColor="@color/text_primary"
        android:fontFamily="@font/poppins_bold"
        />
    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/learn"
        android:layout_below="@id/tv_name_app"
        android:layout_centerHorizontal="true"
        android:textSize="18dp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textColor="@color/text_secondary"
        android:fontFamily="@font/poppins_regular"
        android:textStyle="normal"
        />

    <ImageView
        android:id="@+id/img_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_start"
        android:layout_centerInParent="true"
        android:layout_below="@id/tv_desc"
        android:layout_marginTop="49dp"/>
    <Button
        android:id="@+id/btn_start"
        android:layout_width="158dp"
        android:layout_height="60dp"
        android:text="@string/btn_mulai"
        android:backgroundTint="@color/btn_color"
        android:textSize="18sp"
        android:layout_below="@id/img_first"
        android:layout_marginTop="-30dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/white"/>


</RelativeLayout>