<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_surah"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:clickable="true"
    android:focusable="true"
    app:cardUseCompatPadding="true"
    app:contentPadding="6dp"
    app:strokeColor="@color/text_primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/number_surah"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_surah"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textColor="@color/text_accent"
            android:textSize="18sp"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_name_arabic"
            app:layout_constraintStart_toEndOf="@+id/tv_number"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/surah_name"/>

        <TextView
            android:id="@+id/tv_ayah"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_surah"
            app:layout_constraintStart_toStartOf="@+id/tv_surah"
            app:layout_constraintTop_toBottomOf="@id/tv_surah"
            android:text="@string/surah_type"
            android:textColor="@color/text_secondary"/>

        <TextView
            android:id="@+id/tv_name_arabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/amiri_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/surah_arabic_default"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>